# configurator

./: .gitignore  Pipfile  README.md  manifest.schema.json  pylintrc  pyproject.toml  repo_manifest.schema.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
scripts/: bootstrap.ps1  bootstrap.sh
src/configurator/: __init__.py  cli.py  settings.py  util.py
src/configurator/installer/: __init__.py  config.py  copy.py  paths.py  protocol.py  setup.py  terminal.py
src/hwconfig/: cli.py  config.py  constants.py  install.py  installer.py  io.py  lib.py  main.py  models.py  paths.py  platform.py  result.py  settings.py  util.py
src/hwconfig/data_repo/: config.py  manifest.py  manifest_schema.py  model.py  sync.py
src/hwconfig/installer/: abstract.py  config.py  copy.py  model.py  protocol.py  setup.py  terminal.py
test/: conftest.py  test_copy_installer.py  test_install_config.py  test_terminal_settings.py  test_win_terminal_installer.py
test/test_data/: repo_manifest.json  terminal_settings.json
test/test_data/windows_terminal/local_target/: settings.json
test/test_data/windows_terminal/source/: terminal_settings.json
tests/: __init__.py  conftest.py  test_copy_installer.py  test_win_terminal_installer.py
