[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hwconfig"
description = ""
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["click"]
dynamic = ["version"]

[project.scripts]
hwconfig = "hwconfig.cli:hwconfig"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hwconfig = ["py.typed"]

[tool.ruff]
line-length = 120
src = ["src"]
select = ["ALL"]
ignore = ["TD002", "TD003", "ANN101", "S101"]
target-version = "py37"

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
line-length = 120
